force-app/main/default/objects/Measurement__c/Measurement__c.object-meta.xml
<CustomObject>
    <label>Measurement</label>
    <nameField>
    <label>Measurement</label>
    <description>Records flow measurement data from wellheads, pipelines, and meters for production volume tracking and allocation.</description>
        <type>AutoNumber</type>
        <displayFormat>{0000}</displayFormat>
    </nameField>
    <pluralLabel>Measurements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>