force-app/main/default/objects/Measurement__c/fields/BSandW_Percent__c.field-meta.xml
<CustomField>
    <fullName>BSandW_Percent__c</fullName>
    <label>BSandW Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>