force-app/main/default/objects/Measurement__c/fields/Gravity__c.field-meta.xml
<CustomField>
    <fullName>Gravity__c</fullName>
    <label>Gravity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>