force-app/main/default/objects/Measurement__c/fields/Gross_Volume__c.field-meta.xml
<CustomField>
    <fullName>Gross_Volume__c</fullName>
    <label>Gross Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>