force-app/main/default/objects/Measurement__c/fields/Measurement_Type__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Type__c</fullName>
    <label>Measurement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oil Flow</fullName>
            </value>
            <value>
                <fullName>Gas Flow</fullName>
            </value>
            <value>
                <fullName>Water Flow</fullName>
            </value>
            <value>
                <fullName>Pressure</fullName>
            </value>
            <value>
                <fullName>Temperature</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>