force-app/main/default/objects/Measurement__c/fields/Meter_Factor__c.field-meta.xml
<CustomField>
    <fullName>Meter_Factor__c</fullName>
    <label>Meter Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>