force-app/main/default/objects/Measurement__c/fields/Net_Volume__c.field-meta.xml
<CustomField>
    <fullName>Net_Volume__c</fullName>
    <label>Net Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>