force-app/main/default/objects/Measurement__c/fields/Pipeline_Station__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Station__c</fullName>
    <label>Pipeline Station</label>
    <referenceTo>Pipeline_Station__c</referenceTo>
    <relationshipLabel>Measurements</relationshipLabel>
    <relationshipName>Measurements</relationshipName>
    <type>Lookup</type>
</CustomField>