force-app/main/default/objects/Measurement__c/fields/Reading_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Reading_DateTime__c</fullName>
    <label>Reading Date Time</label>
    <type>DateTime</type>
</CustomField>